# kyotocabinet

./: #kcthread.cc#  ChangeLog  Doxyfile  Makefile.in  README  THANKS  VCmakefile  cmdcommon.h  configure  configure.in  kccachedb.cc  kccachedb.h  kccachetest.cc  kccommon.h  kccompare.cc  kccompare.h  kccompress.cc  kccompress.h  kcdb.cc  kcdb.h  kcdbext.cc  kcdbext.h  kcdirdb.cc  kcdirdb.h  kcdirmgr.cc  kcdirtest.cc  kcfile.cc  kcfile.h  kcforestmgr.cc  kcforesttest.cc  kcgrasstest.cc  kchashdb.cc  kchashdb.h  kchashmgr.cc  kchashtest.cc  kclangc.cc  kclangc.h  kclangctest.c  kcmap.cc  kcmap.h  (+124 more)
debian/: .gitattributes  README.packaging  changelog  control  copyright  gbp.conf  kyotocabinet-bin.install  kyotocabinet-doc.dirs  kyotocabinet-doc.doc-base  kyotocabinet-doc.docs  kyotocabinet-doc.install  libkyotocabinet-dev.install  libkyotocabinet7.install  libkyotocabinet7.symbols  libkyotocabinet8.symbols  libkyotocabinet9.symbols  libkyotocabinet9.symbols.amd64  libkyotocabinet9.symbols.i386  rules  watch
debian/patches/: 0001-Don-t-drop-a-shared-ccache.patch  0001-pkg-config.pc.in-move-LIBS-in-the-Libs.private-secti.patch  0002-Avoid-LDENV-to-avoid-rpaths.patch  0002-pkg-config.pc.in-move-LIBS-in-the-Libs.private-secti.patch  0003-Avoid-LDENV-to-avoid-rpaths.patch  0003-Don-t-drop-a-shared-ccache.patch  0004-Link-as-needed-to-avoid-creating-unnecessary-depende.patch  0005-Tweak-links-for-browsing-installed-docs.patch  0006-Don-t-run-ldconfig-when-DESTDIR-is-defined-it-s-slow.patch  0006-disable-UBC-feature-on-hppa-since-it-causes-test-sui.patch  series
doc/: command.html  common.css  index.html  index.html~  kyotoproducts.odp  kyotoproducts.ppt  spex-en.html  spex.html  util.html
doc/api/: annotated.html  classes.html  classkyotocabinet_1_1ArcfourCompressor-members.html  classkyotocabinet_1_1ArcfourCompressor.html  classkyotocabinet_1_1AtomicInt64-members.html  classkyotocabinet_1_1AtomicInt64.html  classkyotocabinet_1_1BasicDB-members.html  classkyotocabinet_1_1BasicDB.html  classkyotocabinet_1_1BasicDB_1_1Cursor-members.html  classkyotocabinet_1_1BasicDB_1_1Cursor.html  classkyotocabinet_1_1BasicDB_1_1Error-members.html  classkyotocabinet_1_1BasicDB_1_1Error.html  classkyotocabinet_1_1BasicDB_1_1FileProcessor-members.html  classkyotocabinet_1_1BasicDB_1_1FileProcessor.html  classkyotocabinet_1_1BasicDB_1_1Logger-members.html  classkyotocabinet_1_1BasicDB_1_1Logger.html  classkyotocabinet_1_1BasicDB_1_1MetaTrigger-members.html  classkyotocabinet_1_1BasicDB_1_1MetaTrigger.html  classkyotocabinet_1_1BasicDB_1_1ProgressChecker-members.html  classkyotocabinet_1_1BasicDB_1_1ProgressChecker.html  classkyotocabinet_1_1CacheDB-members.html  classkyotocabinet_1_1CacheDB.html  classkyotocabinet_1_1CacheDB_1_1Cursor-members.html  classkyotocabinet_1_1CacheDB_1_1Cursor.html  classkyotocabinet_1_1Comparator-members.html  classkyotocabinet_1_1Comparator.html  classkyotocabinet_1_1Compressor-members.html  classkyotocabinet_1_1Compressor.html  classkyotocabinet_1_1CondVar-members.html  classkyotocabinet_1_1CondVar.html  classkyotocabinet_1_1DB-members.html  classkyotocabinet_1_1DB.html  classkyotocabinet_1_1DB_1_1Cursor-members.html  classkyotocabinet_1_1DB_1_1Cursor.html  classkyotocabinet_1_1DB_1_1Visitor-members.html  classkyotocabinet_1_1DB_1_1Visitor.html  classkyotocabinet_1_1DecimalComparator-members.html  classkyotocabinet_1_1DecimalComparator.html  classkyotocabinet_1_1DecimalDescendingComparator-members.html  classkyotocabinet_1_1DecimalDescendingComparator.html  (+213 more)
doc/api/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_7a.html  all_7e.html  classes_61.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_68.html  classes_69.html  classes_6c.html  classes_6d.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_76.html  classes_7a.html  enums_63.html  enums_66.html  (+56 more)
example/: Makefile  kccacheex.cc  kcdirex.cc  kcforestex.cc  kcgrassex.cc  kchashex.cc  kcmrex.cc  kcpolyex.cc  kcprotoex.cc  kctreeex.cc  kcvisex.cc
lab/: codecheck  codecheck~  kcsort.h  segvtest  sigsegv  sigsegv~  stopwatch
man/: hoge  kccachetest.1  kcdirmgr.1  kcdirtest.1  kcforestmgr.1  kcforesttest.1  kcgrasstest.1  kchashmgr.1  kchashtest.1  kclangctest.1  kcpolymgr.1  kcpolytest.1  kcprototest.1  kcstashtest.1  kctreemgr.1  kctreetest.1  kcutilcodec.1  kcutilmgr.1  kcutiltest.1
